# EarthSystemEmergentConstraints

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: adding_a_constraint.md  concepts.md  extensions.md  schema.md
julia/EarthSystemEmergentConstraints.jl/ext/CliMA/: EarthSystemEmergentConstraintsClimaAtmosExt.jl
julia/EarthSystemEmergentConstraints.jl/src/: types.jl
lib/bib/: references.bib
lib/constraints/: README.md  REAMDE.md  __EXAMPLE__.toml
lib/constraints/collections/: ecs.toml  starter.toml
lib/constraints/registry/: 02f52cf5-c4ac-481d-aaaa-aae72be65b2e.toml  1026a1a1-e94d-4360-962c-2248e77d8642.toml  3f1e4e61-7cf7-4b95-ac0c-fa2f2a1fc14f.toml  ab135ba9-1785-4624-a1e4-156e91d25232.toml  b63e59dd-8915-4102-92fb-2214e061a762.toml  fbc1881c-39d7-4b75-b74b-896f72ec7edd.toml
lib/julia/EarthSystemEmergentConstraints.jl/: Project.toml
lib/julia/EarthSystemEmergentConstraints.jl/.dev/: Project.toml  up_deps.jl
lib/julia/EarthSystemEmergentConstraints.jl/ext/: EarthSystemEmergentConstraintsCMIPVocabExt.jl  EarthSystemEmergentConstraintsESMValToolExt.jl
lib/julia/EarthSystemEmergentConstraints.jl/src/: CMIPVocab.jl  EarthSystemEmergentConstraints.jl  load.jl  paths.jl
lib/python/earth_system_emergent_constraints/: README.md  pyproject.toml
lib/python/earth_system_emergent_constraints/src/earth_system_emergent_constraints/: cmip_vocab.py  load.py  paths.py  types.py
lib/python/earth_system_emergent_constraints/tests/: test_registry.py
schema/: collection.schema.json  constraint.schema.json
(+4 files in other folders)
